--- a/src/index.html
+++ b/src/index.html
@@ -3,27 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>tom's website</title>
+    <title>Calculator</title>
     <meta
       name="description"
-      content="Personal website of Tom Finney and his JavaScript adventures."
+      content="Recreation of the Macintosh System 1.0 Calculator"
     />
-    <link rel="icon" type="image/png" href="./assets/images/fav.png" />
+    <!-- <link rel="icon" type="image/png" href="./assets/images/fav.png" /> -->
   </head>
   <body>
     <div id="root"></div>
     <script src="./index.jsx"></script>
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-133286888-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "UA-133286888-1");
-    </script>
   </body>
 </html>
